# matrix-step-action

./: .eslintignore  .gitattributes  .gitignore  .prettierignore  CODEOWNERS  Cargo.toml  README.md  action.yml  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  webpack.config.ts
.github/linters/: .eslintrc.yml  tsconfig.json
.github/workflows/: ci.yml
pkg/: README.md  matrix_step_action.js  package.json
src/: actions_toolkit.rs  index.js  index.ts  lib.rs
src/actions_toolkit/: core.rs  exec.rs
src/actions_toolkit/core/: summary.rs
src/actions_toolkit/exec/: interfaces.rs
tests/: actions_toolkit.rs
