[package]
name = "matrix-step-action"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
actions = { package = "actions-toolkit", git = "https://github.com/G-M0N3Y-2503/toolkit.git", branch = "rust-wasm-bindings" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true
